{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 2489,
  "lineage": "8b75f764-3084-78b8-ab27-a1981f7f9bca",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "IE_aws_alb",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:706451916282:loadbalancer/app/IE-alb/3bf36ea6c5a829c6",
            "arn_suffix": "app/IE-alb/3bf36ea6c5a829c6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "IE-alb-2082346886.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:706451916282:loadbalancer/app/IE-alb/3bf36ea6c5a829c6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "IE-alb",
            "security_groups": [
              "sg-0e82ce4bac14228ff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-000567f2d34a78f0c"
              },
              {
                "subnet_id": "subnet-0e7583f83ca6daaed"
              }
            ],
            "subnets": [
              "subnet-000567f2d34a78f0c",
              "subnet-0e7583f83ca6daaed"
            ],
            "tags": {
              "name": "IE-alb"
            },
            "tags_all": {
              "name": "IE-alb"
            },
            "vpc_id": "vpc-09ed40f99f1376b8d",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.alb.aws_security_group.IE_alb_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "IE_alb_listener",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:706451916282:listener/app/IE-alb/3bf36ea6c5a829c6/33e9fc85a167ba4c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:706451916282:targetgroup/IE-tg-1/aab004f834f4706e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:706451916282:listener/app/IE-alb/3bf36ea6c5a829c6/33e9fc85a167ba4c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:706451916282:loadbalancer/app/IE-alb/3bf36ea6c5a829c6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.IE_aws_alb",
            "module.alb.aws_lb_target_group.IE_target_group",
            "module.alb.aws_security_group.IE_alb_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "IE_target_group",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:706451916282:targetgroup/IE-tg-1/aab004f834f4706e",
            "arn_suffix": "targetgroup/IE-tg-1/aab004f834f4706e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 120,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:706451916282:targetgroup/IE-tg-1/aab004f834f4706e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "IE-tg-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09ed40f99f1376b8d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "IE_alb_sg",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:706451916282:security-group/sg-0e82ce4bac14228ff",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e82ce4bac14228ff",
            "ingress": [],
            "name": "IE-alb-sg",
            "name_prefix": "",
            "owner_id": "706451916282",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ed40f99f1376b8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_http",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-816810674",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e82ce4bac14228ff",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.IE_alb_sg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_https",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2109600857",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e82ce4bac14228ff",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.IE_alb_sg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_streamlit",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8501,
            "id": "sgrule-2399972912",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e82ce4bac14228ff",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8501,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.IE_alb_sg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_all",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4284525968",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e82ce4bac14228ff",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.IE_alb_sg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.autoScaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "IE-autoscale-sg",
      "provider": "module.autoScaling.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:706451916282:security-group/sg-0c1e5818a05b2e9b4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c1e5818a05b2e9b4",
            "ingress": [],
            "name": "IE-autoscale-sg",
            "name_prefix": "",
            "owner_id": "706451916282",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ed40f99f1376b8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.autoScaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_outbound_access",
      "provider": "module.autoScaling.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-519449163",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c1e5818a05b2e9b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoScaling.aws_security_group.IE-autoscale-sg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.autoScaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "grafana_inbound_access",
      "provider": "module.autoScaling.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3000,
            "id": "sgrule-1557033653",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c1e5818a05b2e9b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoScaling.aws_security_group.IE-autoscale-sg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.autoScaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_inbound_access",
      "provider": "module.autoScaling.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-4175572917",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c1e5818a05b2e9b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoScaling.aws_security_group.IE-autoscale-sg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.autoScaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https_inbound_access",
      "provider": "module.autoScaling.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2487287220",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c1e5818a05b2e9b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoScaling.aws_security_group.IE-autoscale-sg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.autoScaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_exporter_inbound_access",
      "provider": "module.autoScaling.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 9100,
            "id": "sgrule-1904207290",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c1e5818a05b2e9b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9100,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoScaling.aws_security_group.IE-autoscale-sg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.autoScaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "prometheus_inbound_access",
      "provider": "module.autoScaling.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 9090,
            "id": "sgrule-353588556",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c1e5818a05b2e9b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9090,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoScaling.aws_security_group.IE-autoscale-sg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.autoScaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_inbound_access",
      "provider": "module.autoScaling.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1315467776",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c1e5818a05b2e9b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoScaling.aws_security_group.IE-autoscale-sg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.autoScaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "upnp_inbound_access",
      "provider": "module.autoScaling.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8501,
            "id": "sgrule-486568648",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c1e5818a05b2e9b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8501,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoScaling.aws_security_group.IE-autoscale-sg",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:706451916282:route-table/rtb-091078a4cdf3cfbe2",
            "default_route_table_id": "rtb-091078a4cdf3cfbe2",
            "id": "rtb-091078a4cdf3cfbe2",
            "owner_id": "706451916282",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "IEPrivRouteTab"
            },
            "tags_all": {
              "Name": "IEPrivRouteTab"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ed40f99f1376b8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IEgw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:706451916282:internet-gateway/igw-0dae0b4ab3fea609d",
            "id": "igw-0dae0b4ab3fea609d",
            "owner_id": "706451916282",
            "tags": {
              "Name": "IEgw"
            },
            "tags_all": {
              "Name": "IEgw"
            },
            "vpc_id": "vpc-09ed40f99f1376b8d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:706451916282:route-table/rtb-02404e4c93a611374",
            "id": "rtb-02404e4c93a611374",
            "owner_id": "706451916282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dae0b4ab3fea609d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "IEPubRouteTab"
            },
            "tags_all": {
              "Name": "IEPubRouteTab"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ed40f99f1376b8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.IEgw",
            "module.vpc.aws_vpc.IEvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_ass",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017a8b7a3a3f3780d",
            "route_table_id": "rtb-091078a4cdf3cfbe2",
            "subnet_id": "subnet-09058a6075d5ade34"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_route",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0734410c3175cd0c9",
            "route_table_id": "rtb-091078a4cdf3cfbe2",
            "subnet_id": "subnet-0ff624cc7536c5d23"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_route",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_ass",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a9dc3d296edd442",
            "route_table_id": "rtb-02404e4c93a611374",
            "subnet_id": "subnet-000567f2d34a78f0c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IEgw",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e35a6a816fc83fd",
            "route_table_id": "rtb-02404e4c93a611374",
            "subnet_id": "subnet-0e7583f83ca6daaed"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IEgw",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:706451916282:subnet/subnet-09058a6075d5ade34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09058a6075d5ade34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706451916282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "IEPrivSubnet.1"
            },
            "tags_all": {
              "Name": "IEPrivSubnet.1"
            },
            "vpc_id": "vpc-09ed40f99f1376b8d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:706451916282:subnet/subnet-0ff624cc7536c5d23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff624cc7536c5d23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706451916282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "IEPrivSubnet.2"
            },
            "tags_all": {
              "Name": "IEPrivSubnet.2"
            },
            "vpc_id": "vpc-09ed40f99f1376b8d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:706451916282:subnet/subnet-000567f2d34a78f0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000567f2d34a78f0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "706451916282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "IEPubSubnet.1"
            },
            "tags_all": {
              "Name": "IEPubSubnet.1"
            },
            "vpc_id": "vpc-09ed40f99f1376b8d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:706451916282:subnet/subnet-0e7583f83ca6daaed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7583f83ca6daaed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "706451916282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "IEPubSubnet.2"
            },
            "tags_all": {
              "Name": "IEPubSubnet.2"
            },
            "vpc_id": "vpc-09ed40f99f1376b8d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.IEvpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "IEvpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:706451916282:vpc/vpc-09ed40f99f1376b8d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bffac3e4876c913d",
            "default_route_table_id": "rtb-091078a4cdf3cfbe2",
            "default_security_group_id": "sg-01f02730a5235503f",
            "dhcp_options_id": "dopt-0d9139aa92d176ae6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09ed40f99f1376b8d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-091078a4cdf3cfbe2",
            "owner_id": "706451916282",
            "tags": {
              "Name": "IEvpc"
            },
            "tags_all": {
              "Name": "IEvpc"
            }
          }
        }
      ]
    }
  ]
}